# bittersweet

./: .gitignore  .gitignore.in  .octocov.yml  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: cratesio-publish.yml  octocov.yml  repo-settings.yml  test.yml
scripts/: check-repo-settings.sh  check-version.sh
src/: bitline.rs  lib.rs  matrix.rs
src/bitline/: base.rs  mod.rs  uints.rs
tests/: integration_test.rs
